syntax = "proto3";

import "slot.proto";

message IntentConfiguration {
    string name = 1;
    string domain = 2;
    string language = 3;
    string version = 4;

    repeated Slot slots = 5;

    string intent_classifier_path = 6; // e.g. ../models/intent_classification/BookRestaurant_config.pb
    string tokens_classifier_path = 7; // e.g. ../models/tokens_classification/BookRestaurant_config.pb
}
