syntax = "proto3";

message Configuration {
    message Slot {
        string name = 1;
        Resolver resolver = 2;
    }

    message Resolver {
        string name = 1;
        repeated Argument arguments = 2;
    }

    string intent_name = 1;
    string intent_classifier_name = 2;
    string tokens_classifier_name = 3;
    repeated Slot slots = 4;
}

message Model {
    enum Type {
        INTENT_CLASSIFIER = 0;
        TOKENS_CLASSIFIER = 1;
    }

    Type type = 1;
    string classifier_type = 2;
    repeated Argument arguments = 3;
    repeated Feature features = 4;
}

message Feature {
    enum Type {
        HAS_GAZETTEER_HITS = 0;
        NGRAM_MATCHER = 1;
        IS_FIRST_WORD = 2;
        IS_LAST_WORD = 3;
        IS_CAPITALIZED = 4;
        IS_DATE = 5;
        CONTAINS_POSSESSIVE = 6;
    }

    enum Domain {
        SHARED_SCALAR = 0;
        SHARED_VECTOR = 1;
    }

    Type type = 1;
    oneof domain {
        Domain known_domain = 2;
        string other_domain = 3;
    }
    repeated Argument arguments = 4;
}

message Argument {
    oneof value {
        string gazetteer = 1;
        string str = 2;
        double scalar = 3;
        Matrix matrix = 4;
        string model = 5;
        bool boolean = 6;
    }
}

message Matrix {
    uint32 rows = 1;
    uint32 cols = 2;
    repeated double buffer = 3 [packed=true];
}
